// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetSLO resets all associated resources 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-summary-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-summary-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 5`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "index": ".slo-observability.sli-v3*",
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "term": Object {
                  "slo.id": "irrelevant",
                },
              },
            ],
          },
        },
        "refresh": true,
      },
    ],
    Array [
      Object {
        "index": ".slo-observability.summary-v3*",
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "term": Object {
                  "slo.id": "irrelevant",
                },
              },
            ],
          },
        },
        "refresh": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 6`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "budgetingMethod": "occurrences",
        "createdAt": 2023-01-01T00:00:00.000Z,
        "description": "irrelevant",
        "enabled": true,
        "groupBy": "*",
        "id": "irrelevant",
        "indicator": Object {
          "params": Object {
            "environment": "irrelevant",
            "index": "metrics-apm*",
            "service": "irrelevant",
            "threshold": 500,
            "transactionName": "irrelevant",
            "transactionType": "irrelevant",
          },
          "type": "sli.apm.transactionDuration",
        },
        "name": "irrelevant",
        "objective": Object {
          "target": 0.999,
        },
        "revision": 1,
        "settings": Object {
          "frequency": Duration {
            "unit": "m",
            "value": 1,
          },
          "preventInitialBackfill": false,
          "syncDelay": Duration {
            "unit": "m",
            "value": 1,
          },
        },
        "tags": Array [
          "critical",
          "k8s",
        ],
        "timeWindow": Object {
          "duration": Duration {
            "unit": "d",
            "value": 7,
          },
          "type": "rolling",
        },
        "updatedAt": 2023-01-01T00:00:00.000Z,
        "version": 1,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 7`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-summary-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 8`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "_meta": Object {
          "description": "Ingest pipeline for SLO rollup data",
          "managed": true,
          "managed_by": "observability",
          "version": 3.3,
        },
        "description": "Ingest pipeline for SLO rollup data [id: irrelevant, revision: 1]",
        "id": ".slo-observability.sli.pipeline-irrelevant-1",
        "processors": Array [
          Object {
            "set": Object {
              "field": "event.ingested",
              "value": "{{{_ingest.timestamp}}}",
            },
          },
          Object {
            "set": Object {
              "field": "slo.id",
              "value": "irrelevant",
            },
          },
          Object {
            "set": Object {
              "field": "slo.revision",
              "value": 1,
            },
          },
          Object {
            "date_index_name": Object {
              "date_formats": Array [
                "UNIX_MS",
                "ISO8601",
                "yyyy-MM-dd'T'HH:mm:ss.SSSXX",
              ],
              "date_rounding": "M",
              "field": "@timestamp",
              "index_name_prefix": ".slo-observability.sli-v3.3.",
            },
          },
          Object {
            "dot_expander": Object {
              "field": "*",
              "if": "ctx.slo.groupings != null",
              "ignore_failure": true,
              "path": "slo.groupings",
            },
          },
          Object {
            "set": Object {
              "description": "Generated the instanceId field based on the groupings field",
              "field": "slo.instanceId",
              "value": "*",
            },
          },
          Object {
            "pipeline": Object {
              "ignore_failure": true,
              "ignore_missing_pipeline": true,
              "name": "slo-irrelevant@custom",
            },
          },
        ],
      },
    ],
    Array [
      Object {
        "_meta": Object {
          "description": "Ingest pipeline for SLO summary data [id: irrelevant, revision: 1]",
          "managed": true,
          "managed_by": "observability",
          "version": 3.3,
        },
        "description": "Ingest pipeline for SLO summary data [id: irrelevant, revision: 1]",
        "id": ".slo-observability.summary.pipeline-irrelevant-1",
        "processors": Array [
          Object {
            "set": Object {
              "description": "Set errorBudgetEstimated field",
              "field": "errorBudgetEstimated",
              "value": false,
            },
          },
          Object {
            "set": Object {
              "description": "Set isTempDoc field",
              "field": "isTempDoc",
              "value": false,
            },
          },
          Object {
            "set": Object {
              "description": "Set groupBy field",
              "field": "slo.groupBy",
              "value": "*",
            },
          },
          Object {
            "set": Object {
              "description": "Set name field",
              "field": "slo.name",
              "value": "irrelevant",
            },
          },
          Object {
            "set": Object {
              "description": "Set description field",
              "field": "slo.description",
              "value": "irrelevant",
            },
          },
          Object {
            "set": Object {
              "description": "Set tags field",
              "field": "slo.tags",
              "value": Array [
                "critical",
                "k8s",
              ],
            },
          },
          Object {
            "set": Object {
              "description": "Set indicator.type field",
              "field": "slo.indicator.type",
              "value": "sli.apm.transactionDuration",
            },
          },
          Object {
            "set": Object {
              "description": "Set budgetingMethod field",
              "field": "slo.budgetingMethod",
              "value": "occurrences",
            },
          },
          Object {
            "set": Object {
              "description": "Set timeWindow.duration field",
              "field": "slo.timeWindow.duration",
              "value": "7d",
            },
          },
          Object {
            "set": Object {
              "description": "Set timeWindow.type field",
              "field": "slo.timeWindow.type",
              "value": "rolling",
            },
          },
          Object {
            "set": Object {
              "description": "Set objective.target field",
              "field": "slo.objective.target",
              "value": 0.999,
            },
          },
          Object {
            "set": Object {
              "description": "if 'statusCode == 0', set status to NO_DATA",
              "field": "status",
              "if": "ctx.statusCode == 0",
              "value": "NO_DATA",
            },
          },
          Object {
            "set": Object {
              "description": "if 'statusCode == 1', set statusLabel to VIOLATED",
              "field": "status",
              "if": "ctx.statusCode == 1",
              "value": "VIOLATED",
            },
          },
          Object {
            "set": Object {
              "description": "if 'statusCode == 2', set status to DEGRADING",
              "field": "status",
              "if": "ctx.statusCode == 2",
              "value": "DEGRADING",
            },
          },
          Object {
            "set": Object {
              "description": "if 'statusCode == 4', set status to HEALTHY",
              "field": "status",
              "if": "ctx.statusCode == 4",
              "value": "HEALTHY",
            },
          },
          Object {
            "set": Object {
              "field": "summaryUpdatedAt",
              "value": "{{{_ingest.timestamp}}}",
            },
          },
          Object {
            "set": Object {
              "field": "spaceId",
              "value": "some-space",
            },
          },
          Object {
            "set": Object {
              "description": "Store the indicator params",
              "field": "slo.indicator.params",
              "ignore_failure": true,
              "value": Object {
                "environment": "irrelevant",
                "index": "metrics-apm*",
                "service": "irrelevant",
                "threshold": 500,
                "transactionName": "irrelevant",
                "transactionType": "irrelevant",
              },
            },
          },
          Object {
            "set": Object {
              "field": "slo.createdAt",
              "value": 2023-01-01T00:00:00.000Z,
            },
          },
          Object {
            "set": Object {
              "field": "slo.updatedAt",
              "value": 2023-01-01T00:00:00.000Z,
            },
          },
          Object {
            "set": Object {
              "field": "kibanaUrl",
              "ignore_failure": true,
              "value": "http://myhost.com/mock-server-basepath",
            },
          },
          Object {
            "script": Object {
              "description": "Computes the last five minute burn rate value",
              "lang": "painless",
              "params": Object {
                "isTimeslice": false,
                "totalSlicesInRange": 0,
              },
              "source": "def totalEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"fiveMinuteBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"fiveMinuteBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
            },
          },
          Object {
            "script": Object {
              "description": "Computes the last hour burn rate value",
              "lang": "painless",
              "params": Object {
                "isTimeslice": false,
                "totalSlicesInRange": 0,
              },
              "source": "def totalEvents = ctx[\\"oneHourBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneHourBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneHourBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
            },
          },
          Object {
            "script": Object {
              "description": "Computes the last day burn rate value",
              "lang": "painless",
              "params": Object {
                "isTimeslice": false,
                "totalSlicesInRange": 0,
              },
              "source": "def totalEvents = ctx[\\"oneDayBurnRate\\"][\\"totalEvents\\"];
  def goodEvents = ctx[\\"oneDayBurnRate\\"][\\"goodEvents\\"];
  def errorBudgetInitial = ctx[\\"errorBudgetInitial\\"];

  if (totalEvents == null || totalEvents == 0) {
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = 0.0;
    return;
  }

  def totalSlicesInRange = params[\\"totalSlicesInRange\\"];
  def isTimeslice = params[\\"isTimeslice\\"];
  if (isTimeslice && totalSlicesInRange > 0) {
    def badEvents = (double)totalEvents - (double)goodEvents;
    def sliValue = 1.0 - (badEvents / (double)totalSlicesInRange);
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  } else {
    def sliValue = (double)goodEvents / (double)totalEvents;
    ctx[\\"oneDayBurnRate\\"][\\"value\\"] = (1.0 - sliValue) / errorBudgetInitial;
  }",
            },
          },
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 9`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "budgetingMethod": "occurrences",
        "createdAt": 2023-01-01T00:00:00.000Z,
        "description": "irrelevant",
        "enabled": true,
        "groupBy": "*",
        "id": "irrelevant",
        "indicator": Object {
          "params": Object {
            "environment": "irrelevant",
            "index": "metrics-apm*",
            "service": "irrelevant",
            "threshold": 500,
            "transactionName": "irrelevant",
            "transactionType": "irrelevant",
          },
          "type": "sli.apm.transactionDuration",
        },
        "name": "irrelevant",
        "objective": Object {
          "target": 0.999,
        },
        "revision": 1,
        "settings": Object {
          "frequency": Duration {
            "unit": "m",
            "value": 1,
          },
          "preventInitialBackfill": false,
          "syncDelay": Duration {
            "unit": "m",
            "value": 1,
          },
        },
        "tags": Array [
          "critical",
          "k8s",
        ],
        "timeWindow": Object {
          "duration": Duration {
            "unit": "d",
            "value": 7,
          },
          "type": "rolling",
        },
        "updatedAt": 2023-01-01T00:00:00.000Z,
        "version": 1,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 10`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ResetSLO resets all associated resources 11`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "document": Object {
          "errorBudgetConsumed": 0,
          "errorBudgetEstimated": false,
          "errorBudgetInitial": 0.0010000000000000009,
          "errorBudgetRemaining": 1,
          "fiveMinuteBurnRate": Object {
            "goodEvents": 0,
            "totalEvents": 0,
            "value": 0,
          },
          "goodEvents": 0,
          "isTempDoc": true,
          "kibanaUrl": "http://myhost.com/mock-server-basepath",
          "latestSliTimestamp": null,
          "monitor": Object {
            "config_id": null,
            "name": null,
          },
          "observer": Object {
            "geo": Object {
              "name": null,
            },
            "name": null,
          },
          "oneDayBurnRate": Object {
            "goodEvents": 0,
            "totalEvents": 0,
            "value": 0,
          },
          "oneHourBurnRate": Object {
            "goodEvents": 0,
            "totalEvents": 0,
            "value": 0,
          },
          "service": Object {
            "environment": "irrelevant",
            "name": "irrelevant",
          },
          "sliValue": -1,
          "slo": Object {
            "budgetingMethod": "occurrences",
            "createdAt": "2023-01-01T00:00:00.000Z",
            "description": "irrelevant",
            "groupBy": "*",
            "groupings": Object {},
            "id": "irrelevant",
            "indicator": Object {
              "params": Object {
                "environment": "irrelevant",
                "index": "metrics-apm*",
                "service": "irrelevant",
                "threshold": 500,
                "transactionName": "irrelevant",
                "transactionType": "irrelevant",
              },
              "type": "sli.apm.transactionDuration",
            },
            "instanceId": "*",
            "name": "irrelevant",
            "objective": Object {
              "target": 0.999,
              "timesliceTarget": undefined,
              "timesliceWindow": undefined,
            },
            "revision": 1,
            "tags": Array [
              "critical",
              "k8s",
            ],
            "timeWindow": Object {
              "duration": "7d",
              "type": "rolling",
            },
            "updatedAt": "2023-01-01T00:00:00.000Z",
          },
          "spaceId": "some-space",
          "status": "NO_DATA",
          "statusCode": 0,
          "summaryUpdatedAt": null,
          "totalEvents": 0,
          "transaction": Object {
            "name": "irrelevant",
            "type": "irrelevant",
          },
        },
        "id": "slo-irrelevant",
        "index": ".slo-observability.summary-v3.3.temp",
        "refresh": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
